# slurmbot

./: .gitignore  DEADJOE  README.md  default.yaml  pyproject.toml
slurmbot/: err  out  slurmbot.py  teleslurm.py  test.py
